<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/fi_rr_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/fi_rr_layout_fluid"
        android:title="@string/title_dashboard" />

    <item
        android:enabled="false"
        android:icon="@null"
        android:title="@null" />

    <item
        android:id="@+id/navigation_formations"
        android:icon="@drawable/fi_rr_layers"
        android:title="@string/title_services" />

    <item
        android:id="@+id/navigation_participants"
        android:icon="@drawable/fi_rr_users_alt"
        android:title="@string/title_participants" />

</menu>