<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.add.AddFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/add_participant"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/participant_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/subscriber_logo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/fi_rr_user"
                app:tint="?colorPrimary" />

            <TextView
                android:id="@+id/subscriber_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/title_add_participants"
                android:textAlignment="center"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/add_student"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/student_logo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_fi_rr_users"
                app:tint="?colorPrimary" />

            <TextView
                android:id="@+id/student_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/title_add_student"
                android:textAlignment="center"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/add_formation"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/service_logo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/fi_rr_layers"
                app:tint="?colorPrimary" />

            <TextView
                android:id="@+id/service_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/title_add_formation"
                android:textAlignment="center"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/add_class"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/class_logo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/fi_rr_school"
                app:tint="?colorPrimary" />

            <TextView
                android:id="@+id/class_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/title_add_class"
                android:textAlignment="center"
                android:textColor="?colorPrimary"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="189dp"
        android:contentDescription="@string/add_participant"
        android:rotation="45"
        android:src="@drawable/ic_add_small"
        android:visibility="gone"
        app:elevation="0dp"
        app:layout_anchor="@id/nav_view"
        app:layout_anchorGravity="center|top"
        app:maxImageSize="40dp"
        app:tint="@color/white" />

</androidx.appcompat.widget.LinearLayoutCompat>